# book.feelpp.org

./: .gitattributes  .gitignore  404.html  CNAME  CONTRIBUTING.adoc  Dockerfile  GLOSSARY.adoc  Gemfile  Makefile  README.adoc  _config.yml  antora-github-feelpp-doc.yml  antora-local-feelpp-doc.yml  applications.adoc  book.adoc  cluster-list.adoc  clusters.adoc  config.json  cover.js  docinfo-footer.html  docinfo.html  docker-compose.yml  feelpp.bib  feelpp.ipynb  fem.adoc  generate-jupyter.sh  index.adoc  index.html  install.adoc  man-list.adoc  math-list.adoc  math.adoc  modeling.adoc  netlify-build.sh  netlify.toml  package-lock.json  package.json  preface.adoc  prog-list.adoc  programming-syntax-quick-reference.adoc  (+38 more)
.buildkite/: pipeline.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
00-preface/: README.adoc  notations.adoc
01-installation/: README.adoc  building.adoc  docker.adoc  mac.adoc
02-docker/: README.adoc  cmakefeel.adoc  docker-version-linux.txt  feelpp-containers.adoc  what-is-docker.adoc
03-modeling/: README.adoc
04-learning/: README.adoc
05-applications/: README.adoc
06-programming/: 01-OutputDirectories.adoc  02-SettingUpEnvironment.adoc  04-UsingExpressions.adoc  05-EvaluatingFunctions.adoc  07-SpaceElements.adoc  08-ComputingIntegrals.adoc  09-UsingBackend.adoc  11-SolveAnEquation.adoc  12-CreateModels.adoc  README.adoc  codingrules.adoc
07-quickref/: README.adoc  cmake.adoc  environment.adoc  exporter.adoc  forms.adoc
docs/: fem.adoc  (+15 more)
docs/man/03-modeling/Thermic/Heat-3D-1/: gnuplot.gn  goldak_1.res  goldak_3.res
(+2972 files in other folders)
